@@ -1,3 +1,3 @@
 [wrap-git]
 url = https://gitlab.freedesktop.org/libinput/libei.git
-revision = tags/1.3.0
+revision = main
