@@ -1,3 +1,3 @@
 [wrap-git]
 url = https://github.com/flatpak/libportal.git
-revision = a1530a9
+revision = main
